--- a/LostAndFound/LostAndFound/LostAndFound.csproj
+++ b/LostAndFound/LostAndFound/LostAndFound.csproj
@@ -65,6 +65,9 @@
     <Compile Include="Views\SearchForLostItemView.xaml.cs">
       <DependentUpon>SearchForLostItemView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\Windows\ClaimItemWindow.xaml.cs">
+      <DependentUpon>ClaimItemWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -86,6 +89,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\SearchForLostItemView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Windows\ClaimItemWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
