--- a/LostAndFound/LostAndFound/LostAndFound.csproj
+++ b/LostAndFound/LostAndFound/LostAndFound.csproj
@@ -162,6 +162,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <None Include="Resources\LostAndFound.xlsx" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
