Fixes build errors
Adds some Excel saving/querying logic

--- a/LostAndFound/LostAndFound/LostAndFound.csproj
+++ b/LostAndFound/LostAndFound/LostAndFound.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Models\LocationTag.cs" />
     <Compile Include="Models\Tag.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Services\ExcelProvider.cs" />
     <Compile Include="ViewModels\ReportFoundViewModel.cs" />
     <Compile Include="Views\Controls\ExpiredItemActionUserControl.xaml.cs">
       <DependentUpon>ExpiredItemActionUserControl.xaml</DependentUpon>
