--- a/LostAndFound/LostAndFound/LostAndFound.csproj
+++ b/LostAndFound/LostAndFound/LostAndFound.csproj
@@ -72,7 +72,8 @@
     <Compile Include="Models\LocationTag.cs" />
     <Compile Include="Models\Tag.cs" />
     <Compile Include="Models\User.cs" />
-    <Compile Include="Services\Providers\ItemProvider.cs" />
+    <Compile Include="Services\Providers\FoundItemProvider.cs" />
+    <Compile Include="Services\Providers\LostItemProvider.cs" />
     <Compile Include="Services\Providers\UserProvider.cs" />
     <Compile Include="ViewModels\ReportFoundViewModel.cs" />
     <Compile Include="Views\Controls\ExpiredItemActionUserControl.xaml.cs">
