Item Providers Part Three
All providers done except for delete

--- a/LostAndFound/LostAndFound/LostAndFound.csproj
+++ b/LostAndFound/LostAndFound/LostAndFound.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Models\LocationTag.cs" />
     <Compile Include="Models\Tag.cs" />
     <Compile Include="Services\Providers\FoundItemProvider.cs" />
+    <Compile Include="Services\Providers\DisposedItemProvider.cs" />
     <Compile Include="Services\Providers\LostItemProvider.cs" />
     <Compile Include="ViewModels\ReportFoundViewModel.cs" />
     <Compile Include="Views\Controls\ExpiredItemActionUserControl.xaml.cs">
